--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@loopback/security": "^0.11.0",
     "@loopback/service-proxy": "^7.0.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "isemail": "^3.2.0",
     "loopback-connector-postgresql": "^7.0.4",
     "tslib": "^2.0.0"
