--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "isemail": "^3.2.0",
+    "jest": "^29.7.0",
     "loopback-connector-postgresql": "^7.0.4",
     "tslib": "^2.0.0"
   },
